# agent-chrome-wrapper

./: .gitignore  AGENTS.md  README.md  SECURITY.md  chrome-wrapper.spec  description.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: dispatch.yml  release.yml  test.yml
.serena/: .reminder-state.json  project.yml
.seretos/: projects.yml
scripts/: build.ps1
skills/chrome-vdesktop-interop/: SKILL.md
src/chrome_wrapper_plugin/: __main__.py  cdp.py  chrome_process.py  hwnd.py  profiles.py  server.py  state.py
tests/: test_cdp.py  test_chrome_process.py  test_integration.py  test_profiles.py  test_server.py  test_smoke.py  test_state.py  test_tools.py
